attachment system tables, entities, dtos clean up database seeder with test info refactor